# OpenPauw

./: .gitignore  .gitmodules  .zenodo.json  15v_Boost.kicad_sch  CITATION.cff  Design_Notes.md  OpenPauw.kicad_pcb  OpenPauw.kicad_pro  OpenPauw.kicad_sch  README.md  sym-lib-table
cad/: ASSEMBLY.md  OpenPauw-eagle-import.kicad_sym  OpenPauw.kibuilder.yaml  OpenPauw.kicad_pcb  OpenPauw.kicad_pro  OpenPauw.kicad_sch  fp-lib-table  sym-lib-table
cad/footprints/3dmodels/: Banana_Cliff_black.step  Banana_Cliff_red.step
cad/footprints/Adafruit-MCP23017/: Adafruit-MCP23017.kicad_sym  MCP23017_Breakout.kicad_mod
cad/footprints/Adafruit-MCP23017.pretty/: MCP23017_Breakout.kicad_mod
cad/footprints/JST_Shielded.pretty/: JST_B4B-PH-SM4-TB.kicad_mod
cad/footprints/Library.pretty/: Untitled.kicad_mod  (+1 more)
cad/symbols/: JST_Shielded.kicad_sym
docs/: Debug_Test_Plan.md  Design_Notes.md  Validation.md
firmware/: Dockerfile  README.md  platformio.ini
firmware/scripts/: build.sh  docker-build.sh  monitor.sh  send_cmd.py  test_protocol.py  upload.sh
firmware/src/: main.cpp  max328_router.cpp  max328_router.h  protocol.cpp  protocol.h  status_led.cpp  status_led.h  switch_validator.cpp  switch_validator.h  test_mode.cpp  test_mode.h  vdp_sequences.cpp  vdp_sequences.h
footprints/Library.pretty/: 221-0043_P16&plus_2_MXM.kicad_mod
footprints/MCP23017_E_SP/: MCP23017-E_SP.kicad_sym  MCP23017-E_SP.step
software/: Dockerfile  README.md  pyproject.toml
software/src/openpauw/: __init__.py  __main__.py  board.py  interactive.py  measurement.py
software/tests/: test_board.py
(+4 files in other folders)
